samples/_failures_safe/1761545057_fe2ad0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28ca27a2.c: In function ‘main’:
./samples/SAFE/__tmp_28ca27a2.c:170:20: error: expected ‘]’ at end of input
  170 |     char input[1024
      |                    ^
      |                    ]
./samples/SAFE/__tmp_28ca27a2.c:170:5: error: expected declaration or statement at end of input
  170 |     char input[1024
      |     ^~~~
